fix(app-home): add overflow-x hidden

--- a/src/pages/app-home/app-home.scss
+++ b/src/pages/app-home/app-home.scss
@@ -1,5 +1,6 @@
 .home {
   font-family: 'Muli', sans-serif;
+  overflow-x: hidden;
   width: auto;
 
   .hero {
